--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ font-family: 'UnifrakturMaguntia', cursive; */
 
 /* Header */
 .header {
-    background: deepskyblue;
+    background: #E8AA2C;
     display: flex;
     justify-content: space-between;
 }
@@ -35,24 +35,38 @@ font-family: 'UnifrakturMaguntia', cursive; */
     flex: 1;
 
     display: flex;
+    justify-content: space-around;
     align-items: center;
-    gap: 10px;
+    column-gap: 10px;
 }
 
 .keyword__label {
-    padding-left: 10px;
+    margin: 0 2em;
+    font-weight: bold;
+    font-size: 1.5em;
+    color: #005248;
+}
+
+.label__citrus {
+    color: #FFEDCB;
 }
 
 .keyword__bar {
     flex: 1;
-    border: none;
+    border: 4px solid white;
+    border-radius: 4px;
 }
 
 .keyword__button {
     border-radius: 4px;
     border: none;
     background-color: rgba(255, 255, 255, 0);
-    
+    margin: 0 1em;
+    color: #FFEDCB;
+}
+
+.keyword__button:hover {
+    color: #005248;
 }
 
 .navigation {
@@ -73,10 +87,15 @@ font-family: 'UnifrakturMaguntia', cursive; */
 }
 
 .navigation a:hover {
-    background: rgb(0, 136, 255);
+    background: #997B4D;
 }
 
 /* Main */
+.main__wrapper {
+    background: #FFEDCB;
+    min-height: calc(100vh - 80px);
+}
+
 .product-header {
     display: flex;
     justify-content: flex-end;
@@ -84,6 +103,7 @@ font-family: 'UnifrakturMaguntia', cursive; */
 
 .product-header__title {
     flex: 1;
+    margin: 0 2em;
 }
 
 .selector-wrapper {
@@ -96,13 +116,19 @@ font-family: 'UnifrakturMaguntia', cursive; */
     flex-flow: row wrap;
     justify-content: center;
     gap: 20px;
-
-    margin: 20px auto 20px auto;
 }
 
 .product {
     display: flex;
     flex-flow: column nowrap;
+    padding: 4px;
+
+    border: 1px solid rgba(0, 0, 0, 0);
+    border-radius: 8px;
+}
+
+.product:hover {
+    border: 1px solid rgba(0, 0, 0, 0.8);
 }
 
 .product__name {
@@ -126,7 +152,7 @@ font-family: 'UnifrakturMaguntia', cursive; */
 
 /* Footer */
 .footer__wrapper {
-    background: deepskyblue;
+    background: #E8AA2C;
 }
 
 .footer__text {
@@ -139,8 +165,20 @@ font-family: 'UnifrakturMaguntia', cursive; */
         justify-content: space-around;
     }
 
+    .navigation li {
+        flex: 1;
+    }
+
+    .navigation li a {
+        text-align: center;
+    }
+
     .header {
         flex-flow: column wrap;
+    }
+
+    .main__wrapper {
+        min-height: calc(100vh - 109px);
     }
 }
 
@@ -161,4 +199,7 @@ font-family: 'UnifrakturMaguntia', cursive; */
         border-bottom: none;
     }
 
+    .main__wrapper {
+        min-height: calc(100vh - 212px);
+    }
 }
